First working item

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,12 @@ group = org.ancienttimes
 archivesBaseName = AncientTimes
 
 mc_version = 1.11.2
-mcp_mappings = snapshot_20170204
-forge_version = 13.20.0.2226
+mcp_mappings = snapshot_20180105
+forge_version = 13.20.1.2386
 
 # Dependencies
 shadowlib_version = 1.8.1
 shadowconfig_version = 2.1.0
-lombok_version = 1.16.6
-mirror_version = 1.0.3
-evalex_version = 1.6
 
-kotlin_version = 1.2.70
+kotlin_version = 1.2.+
 forgelin_version = 1.5.1
