Upgrade to MC 1.12.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ mod_version = 0.1.0-SNAPSHOT
 group = org.ancienttimes
 archivesBaseName = AncientTimes
 
-mc_version = 1.11.2
+mc_version = 1.12.2
 mcp_mappings = snapshot_20180105
-forge_version = 13.20.1.2386
+forge_version = 14.23.4.2705
+forge_gradle_version = 2.3-SNAPSHOT
 
 # Dependencies
 shadowlib_version = 1.8.1
